--- a/src/app/filme/lista-filme/lista-filme.component.html
+++ b/src/app/filme/lista-filme/lista-filme.component.html
@@ -22,7 +22,7 @@
           <button (click)="deletarFilme(filme.idFilme)" type="button" class="btn btn-danger">
             Deletar</button>
           &nbsp; &nbsp;
-          <button type="button" class="btn btn-info">
+          <button (click)="updateFilme(filme.idFilme)" type="button" class="btn btn-info">
             Editar
           </button>
 
